Fix bug on firefox.

--- a/front/src/scripts/components/layouts/main_layout/style/main_layout.scss
+++ b/front/src/scripts/components/layouts/main_layout/style/main_layout.scss
@@ -8,7 +8,6 @@
     padding: 40px;
     width: 100%;
     height: calc(100% - 60px);
-    position: absolute;
     overflow-x: hidden;
 
     & > div {
